--- a/libs/mix.share/src/components/dialogs/creation-dialog/creation-dialog.component.scss
+++ b/libs/mix.share/src/components/dialogs/creation-dialog/creation-dialog.component.scss
@@ -19,7 +19,7 @@
 
     .toolbar {
       height: var(--mix-sub-header-height);
-      background-color: var(--mix-primary);
+      background-color: var(--mix-toolbar-background-color);
       display: flex;
       align-items: center;
       justify-content: flex-end;
