--- a/libs/mix.share/src/components/mix-database-visualize/mix-database-visualize.component.scss
+++ b/libs/mix.share/src/components/mix-database-visualize/mix-database-visualize.component.scss
@@ -9,7 +9,7 @@
     justify-content: flex-start;
     padding: 10px;
     box-sizing: border-box;
-    background-color: var(--mix-primary);
+    background-color: var(--mix-toolbar-background-color);
 
     .action {
       margin-right: 15px;
