--- a/libs/mix.share/src/components/side-menu/side-menu.component.scss
+++ b/libs/mix.share/src/components/side-menu/side-menu.component.scss
@@ -3,7 +3,7 @@
   box-sizing: border-box;
   display: flex;
   position: relative;
-  background-color: var(--mix-body-background);
+  background-color: var(--sidebar-background-color);
 
   &__level-1 {
     height: 100%;
