--- a/libs/mix.ui/src/lib/inline-edit-placeholder/inline-edit-placeholder.component.html
+++ b/libs/mix.ui/src/lib/inline-edit-placeholder/inline-edit-placeholder.component.html
@@ -15,7 +15,7 @@
              (focusedChange)="onFocusedChange($event)"
              (ngModelChange)="onValueChange($event)"
              tuiAutoFocus
-             tuiTextfieldSize="m">
+             tuiTextfieldSize="s">
     Type your template title
     <input type="text"
            tuiTextfield>
