--- a/apps/mix-portal/src/app/routes/portal/detail-template/detail-template.component.html
+++ b/apps/mix-portal/src/app/routes/portal/detail-template/detail-template.component.html
@@ -20,51 +20,8 @@
   </div>
 
   <div class="mix-workspace-container__container">
-    <div class="mix-workspace-container__main-workspace">
-      <div class="detail-template__code-zone">
-        <div class="detail-template__editor-tab">
-          <tui-tabs [(activeItemIndex)]="activeTabIndex">
-            <button (click)="activeTabIndex = 0"
-                    tuiTab>
-              Template
-            </button>
-            <button (click)="activeTabIndex = 1"
-                    tuiTab>
-              JavaScript
-            </button>
-            <button (click)="activeTabIndex = 2"
-                    tuiTab>
-              Style Sheets CSS
-            </button>
-          </tui-tabs>
-        </div>
-
-        <div *ngIf="currentTemplate"
-             class="detail-template__code-editor"
-             [formGroup]="form">
-          <ng-container *ngIf="activeTabIndex === 0">
-            <mix-code-editor class="mix-code-editor"
-                             [language]="'razor'"
-                             formControlName="templateCode">
-            </mix-code-editor>
-          </ng-container>
-
-          <ng-container *ngIf="activeTabIndex === 1">
-            <mix-code-editor class="mix-code-editor"
-                             [language]="'javascript'"
-                             formControlName="javascriptCode">
-            </mix-code-editor>
-          </ng-container>
-
-          <ng-container *ngIf="activeTabIndex === 2">
-            <mix-code-editor class="mix-code-editor"
-                             [language]="'css'"
-                             formControlName="styleSheetCode">
-            </mix-code-editor>
-          </ng-container>
-        </div>
-      </div>
-
-    </div>
+    <mix-template-editor *ngIf="currentTemplate"
+                         [disabled]="true"
+                         [templateId]="currentTemplate.id"></mix-template-editor>
   </div>
 </div>
