--- a/apps/mix-portal/src/app/routes/portal/portal.layout.scss
+++ b/apps/mix-portal/src/app/routes/portal/portal.layout.scss
@@ -8,9 +8,14 @@
   &__workspace {
     width: 100%;
     border-left: 1px solid var(--tui-base-04);
-    border-top-left-radius: var(--mix-border-radius-02);
     background-color: #fff;
-    box-shadow: var(--sidebar-box-shadow);
+    transition: all 0.2s ease-in-out;
+
+    &.--menu-expand {
+      border-top-left-radius: var(--mix-border-radius-02);
+      box-shadow: var(--sidebar-box-shadow);
+      z-index: 2;
+    }
   }
 
   &__main-workspace {
