--- a/apps/mix-portal/src/styles/overwrite.scss
+++ b/apps/mix-portal/src/styles/overwrite.scss
@@ -157,12 +157,7 @@
   --tui-text-01: rgba(27, 31, 59, 1);
   --tui-text-02: rgba(27, 31, 59, 0.65);
   --tui-text-03: rgba(27, 31, 59, 0.4);
-  --tui-link: hsla(
-    var(--primary-color-hue, 211),
-    var(--primary-color-saturation, 100%),
-    var(--primary-color-brightness, 50%),
-    1
-  );
+  --tui-link: #526ed3;
   --tui-link-hover: #6c86e2;
   --tui-positive: #3aa981;
   --tui-positive-hover: #7ac5aa;
@@ -322,19 +317,28 @@ p {
   margin-inline-end: 0px;
 }
 
-tui-tabs.custom-tabs {
-  background: var(--tui-base-01);
-  border-radius: var(--mix-border-radius-01);
-  overflow: hidden;
-  border: 1px solid var(--tui-base-04);
-  padding: 0 10px;
-  box-shadow: var(--mix-box-shadow);
+tui-tabs {
+  .custom-tabs {
+    background: var(--tui-base-01);
+    overflow: hidden;
 
-  ._active {
-    font-weight: 500;
+    &__btn {
+      margin: unset;
+      padding: 0 15px;
+      border-left: 0.5px solid var(--tui-base-03);
+      border-right: 0.5px solid var(--tui-base-03);
+
+      &._active {
+        border-bottom: 2px solid var(--mix-primary);
+      }
+
+      tui-svg {
+        opacity: 0.5;
+        margin-right: 3px;
+      }
+    }
   }
 }
-
 tui-wrapper[data-appearance='support'] {
   background: var(--tui-support-04);
   color: #fff;
