feat(template): add vs code

--- a/libs/mix.share/src/components/template-editor/template-editor.component.html
+++ b/libs/mix.share/src/components/template-editor/template-editor.component.html
@@ -1,7 +1,9 @@
 <div class="template-editor">
   <div class="template-editor__header">
     <div class="logo">
-      <img src="/assets/images/mixcore-logo-red-square.svg">
+      <img src="/assets/images/vscode-insider.png"
+           width="20px"
+           height="20spx">
     </div>
 
     <tui-tabs class="tabs"
