--- a/libs/mix.share/src/components/side-menu/side-menu.component.scss
+++ b/libs/mix.share/src/components/side-menu/side-menu.component.scss
@@ -1,140 +1,156 @@
+$item-active: rgba(15, 146, 243, 0.1);
+$item-hover: rgba(243, 146, 243, 0.1);
+$side-menu-width: 300px;
+$group-width: 68px;
+
 .side-menu {
   height: 100%;
   box-sizing: border-box;
   display: flex;
   position: relative;
-  background-color: var(--sidebar-background-color);
 
-  &__level-1 {
+  &__big-logo {
+    padding: 10px 5px;
+    margin: 10px 5px;
+    border-bottom: 1px solid var(--tui-base-03);
+  }
+
+  &__groups {
+    width: $group-width;
     height: 100%;
-    padding: 5px 5px 5px 5px;
-    border-right: 1px solid var(--tui-base-04);
-    display: flex;
-    align-items: center;
-    flex-direction: column;
-  }
+    background-color: #eaf1fb;
 
-  &__level-1-logo {
-    margin-bottom: 15px;
-    .login-form-logo-square {
-      width: 40px;
-      height: 35px;
-      background-color: #f06;
-      -webkit-mask: url(/assets/images/mixcore-logo-red-square.svg) no-repeat
-        50% 50%;
-      mask: url(/assets/images/mixcore-logo-red-square.svg) no-repeat 50% 50%;
+    .toggle {
+      cursor: pointer;
+      height: $group-width;
+      width: $group-width;
+      margin-bottom: 10px;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      border-radius: 50%;
+
+      &:hover {
+        background-color: $item-hover;
+      }
+
+      &:active {
+        background-color: $item-active;
+      }
+    }
+
+    .item {
+      width: $group-width;
+      height: 58px;
+      margin-bottom: 5px;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      flex-direction: column;
+      transition: all 0.2s ease-in-out;
+      cursor: pointer;
+
+      &:hover {
+        background-color: $item-hover;
+      }
+
+      &.--active {
+        background-color: $item-active;
+      }
+
+      p {
+        font-size: 10px;
+        font-weight: 500;
+      }
+    }
+
+    .search {
+      height: 40px;
+      margin-bottom: 10px;
+      display: flex;
+      align-items: center;
+      justify-content: center;
     }
   }
 
-  &__level-1-icon {
-    margin-bottom: 5px;
-    width: 40px;
-    height: 40px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    cursor: pointer;
-    border-radius: var(--tui-radius-l);
-    color: var(--tui-base-08);
-    &:hover {
-      background-color: var(--tui-primary-hover);
-      color: var(--tui-text-01-night);
-    }
-    &.--active {
-      background-color: var(--mix-primary);
-      color: var(--tui-base-01);
-    }
-  }
+  &__menu {
+    width: calc($side-menu-width - $group-width);
 
-  &__level-2 {
-    height: 100%;
-    width: 255px;
-  }
+    .menu {
+      width: 100%;
+      height: 100%;
+      padding: 20px 10px;
 
-  &__level-2-title {
-    height: var(--mix-header-height);
-    border-bottom: 1px solid var(--tui-base-04);
-    font-size: 16px;
-    font-weight: 500;
-    padding: 0 0 0 32px;
-    display: flex;
-    align-items: center;
-  }
+      &__label {
+        font-weight: 700;
+        font-size: 14px;
+        margin-bottom: 10px;
+      }
 
-  &__level-2-content {
-    padding: 24px 24px 5px 24px;
-  }
+      &__item {
+        padding: 5px 20px;
+        margin-bottom: 3px;
+        margin-left: 15px;
+        border-radius: 2rem;
+        cursor: pointer;
+        color: black;
+        transition: all 0.2s ease;
+        position: relative;
+        background-color: var(--tui-base-02);
 
-  &__detail-item {
-    cursor: pointer;
-    border-radius: 8px;
-    padding: 8px;
-    width: 100%;
-    display: flex;
-    align-items: center;
-    font-size: 14px;
-    transition: background 0.8s;
-    > i-tabler {
-      margin-right: 15px;
-      width: 18px;
-      height: 18px;
-    }
-    &:hover {
-      background-color: var(--tui-primary-hover);
-    }
-    &:active {
-      background-color: #e8f0f7;
-      background-size: 100%;
-      transition: background 0s;
-    }
-  }
+        &:hover {
+          opacity: 0.7;
+        }
 
-  &__collapse-icon {
-    position: absolute;
-    width: 40px;
-    height: 40px;
-    top: 3px;
-    right: 8px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    cursor: pointer;
-    border-radius: 12px;
-  }
+        &:active {
+          background-color: $item-active;
+        }
 
-  &__expand-icon {
-    position: absolute;
-    bottom: 50px;
-    right: -15px;
-    width: 30px;
-    height: 30px;
-    z-index: 5;
-    background-color: var(--mix-body-background);
-    border-radius: 50%;
-    border: 1px solid var(--tui-base-04);
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    cursor: pointer;
-    opacity: 0.7;
+        &::before {
+          display: block;
+          content: '';
+          width: 15px;
+          height: 20px;
+          position: absolute;
+          top: -5px;
+          left: -13px;
+          border-bottom: 2.5px solid var(--tui-base-04);
+          border-left: 2.5px solid var(--tui-base-04);
+          border-bottom-left-radius: 13px;
+        }
+      }
 
-    &:hover {
-      opacity: 1;
-    }
+      &__group {
+        font-weight: 700;
+      }
 
-    i-tabler {
-      width: 18px;
-      height: 18px;
-      transform: rotate(180deg);
+      &__separator {
+        display: block;
+        height: 1px;
+        width: 100%;
+        background-color: var(--tui-base-03);
+        margin-bottom: 10px;
+        margin-top: 10px;
+      }
+
+      &__no-data {
+        width: 100%;
+        height: 40px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        font-size: 11px;
+        opacity: 0.7;
+      }
     }
   }
+}
 
-  .separator {
-    content: '';
-    display: block;
-    height: 1px;
-    width: 100%;
-    background: var(--tui-base-04);
-    margin: 15px 0;
-  }
+[automation-id='tui-accordion__item-content'] {
+  padding: 0.5rem 1rem 1rem 1rem !important;
+}
+
+.header.header_open {
+  background-color: var(--tui-base-02);
+  border-radius: 2rem;
 }
