--- a/apps/mix-portal/src/styles/variables.scss
+++ b/apps/mix-portal/src/styles/variables.scss
@@ -7,7 +7,7 @@
   --sidebar-box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px;
   --sidebar-background-color: #fff;
   --mix-toolbar-background-color: #fff;
-  --mix-body-background: #fff;
+  --mix-body-background: #f5f8ff;
   --mix-box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px;
   --mix-border-radius-01: 10px;
   --mix-border-radius-02: 15px;
