--- a/libs/mix.share/src/components/side-menu/side-menu.component.scss
+++ b/libs/mix.share/src/components/side-menu/side-menu.component.scss
@@ -1,7 +1,10 @@
+// $item-active: rgba(15, 146, 243, 0.1);
+// $item-hover: rgba(243, 146, 243, 0.1);
 $item-active: rgba(15, 146, 243, 0.1);
 $item-hover: rgba(243, 146, 243, 0.1);
 $side-menu-width: 300px;
-$group-width: 68px;
+$group-width: 75px;
+$group-height: 65px;
 
 .side-menu {
   height: 100%;
@@ -18,7 +21,7 @@ $group-width: 68px;
   &__groups {
     width: $group-width;
     height: 100%;
-    background-color: #eaf1fb;
+    background-color: var(--tui-base-01);
 
     .toggle {
       cursor: pointer;
@@ -41,14 +44,28 @@ $group-width: 68px;
 
     .item {
       width: $group-width;
-      height: 58px;
+      height: $group-height;
       margin-bottom: 5px;
       display: flex;
       align-items: center;
       justify-content: center;
       flex-direction: column;
       transition: all 0.2s ease-in-out;
+      position: relative;
       cursor: pointer;
+
+      &::before {
+        display: block;
+        content: '';
+        height: 0px;
+        position: absolute;
+        left: 1px;
+        top: 0;
+        width: 3px;
+        background-color: var(--mix-primary);
+        transition: all 0.2s ease;
+        border-radius: 5px;
+      }
 
       &:hover {
         background-color: $item-hover;
@@ -56,11 +73,18 @@ $group-width: 68px;
 
       &.--active {
         background-color: $item-active;
+
+        &::before {
+          height: $group-height;
+        }
       }
 
       p {
+        height: 17px;
         font-size: 10px;
         font-weight: 500;
+        margin-block-start: 0;
+        margin-block-end: 0;
       }
     }
 
@@ -90,13 +114,12 @@ $group-width: 68px;
       &__item {
         padding: 5px 20px;
         margin-bottom: 3px;
-        margin-left: 15px;
+        margin-left: 3px;
         border-radius: 2rem;
         cursor: pointer;
         color: black;
         transition: all 0.2s ease;
         position: relative;
-        background-color: var(--tui-base-02);
 
         &:hover {
           opacity: 0.7;
@@ -110,13 +133,13 @@ $group-width: 68px;
           display: block;
           content: '';
           width: 15px;
-          height: 20px;
+          height: 30px;
           position: absolute;
-          top: -5px;
-          left: -13px;
-          border-bottom: 2.5px solid var(--tui-base-04);
-          border-left: 2.5px solid var(--tui-base-04);
-          border-bottom-left-radius: 13px;
+          top: -15px;
+          left: 0;
+          border-bottom: 2px solid var(--tui-base-04);
+          border-left: 2px solid var(--tui-base-04);
+          border-bottom-left-radius: 5px;
         }
       }
 
@@ -151,6 +174,12 @@ $group-width: 68px;
 }
 
 .header.header_open {
-  background-color: var(--tui-base-02);
+  background-color: var(--tui-base-01);
   border-radius: 2rem;
+}
+
+tui-accordion-item {
+  .wrapper {
+    background-color: unset !important;
+  }
 }
