feat(portal): new menu V4

--- a/libs/mix.share/src/components/side-menu/content-menu/content-menu.component.html
+++ b/libs/mix.share/src/components/side-menu/content-menu/content-menu.component.html
@@ -4,7 +4,7 @@
     <button type="button"
             [iconRight]="arrow"
             [shape]="'rounded'"
-            [size]="'s'"
+            [size]="'m'"
             tuiButton>
       Create
     </button>
