--- a/libs/mix.share/src/components/side-menu/side-menu.component.scss
+++ b/libs/mix.share/src/components/side-menu/side-menu.component.scss
@@ -13,7 +13,7 @@ $group-height: 65px;
   position: relative;
 
   &__big-logo {
-    padding: 10px 5px;
+    padding: 10px 10px;
     margin: 10px 5px;
     border-bottom: 1px solid var(--tui-base-03);
   }
@@ -69,6 +69,10 @@ $group-height: 65px;
 
       &:hover {
         background-color: $item-hover;
+
+        &::before {
+          height: calc($group-height / 2);
+        }
       }
 
       &.--active {
@@ -103,7 +107,7 @@ $group-height: 65px;
     .menu {
       width: 100%;
       height: 100%;
-      padding: 0px 10px;
+      padding: 0px 10px 10px 15px;
 
       &__label {
         font-weight: 700;
@@ -175,7 +179,7 @@ $group-height: 65px;
 
 .header.header_open {
   background-color: var(--tui-base-01);
-  border-radius: 2rem;
+  border-radius: 1rem;
 }
 
 tui-accordion-item {
