--- a/libs/mix.share/src/components/side-menu/side-menu.component.html
+++ b/libs/mix.share/src/components/side-menu/side-menu.component.html
@@ -1,9 +1,19 @@
 <div *ngIf="groups"
-     class="side-menu">
-  <div class="side-menu__groups">
-    <div class="toggle"
-         (click)="toggleMenu()">
-      <tui-svg src="tuiIconFrameLarge"></tui-svg>
+     class="side-menu"
+     [style.--groupHeight]="isMiniGroupBar ? '40px' : '65px'"
+     [style.--groupWidth]="isMiniGroupBar ? '50px' : '75px'">
+  <div class="side-menu__groups"
+       [ngClass]="{'--mini': isMiniGroupBar}">
+    <div class="toggle">
+      <div class="btn"
+           (click)="toggleMenu()">
+        <tui-svg src="tuiIconFrameLarge"></tui-svg>
+      </div>
+
+      <div class="btn"
+           (click)="toggleMiniGroupBar()">
+        <tui-svg src="tuiIconTableMergeLarge"></tui-svg>
+      </div>
     </div>
 
     <div class="search">
@@ -21,7 +31,7 @@
          [ngClass]="{'--active': currentSelectedItem === menu}"
          (click)="selectGroup(menu)">
       <i-tabler name="{{menu.icon}}"></i-tabler>
-      <p> {{ menu.title }} </p>
+      <p *ngIf="!isMiniGroupBar"> {{ menu.title }} </p>
     </div>
   </div>
 
@@ -30,7 +40,7 @@
        [@enterAnimation]>
     <div class="side-menu__big-logo">
       <img src="assets/images/mixcore-logo-red-2.svg"
-           width="80%">
+           width="165px">
     </div>
     <ng-container [ngSwitch]="currentSelectedItem.id">
       <!-- Dashboard -->
@@ -45,20 +55,8 @@
 
       <!-- Template -->
       <ng-container *ngSwitchCase="'template'">
-        <mix-template-menu></mix-template-menu>
+        <mix-template-menu> </mix-template-menu>
       </ng-container>
     </ng-container>
   </div>
-
-  <ng-template #dashboard>
-    <mix-dashboard-menu></mix-dashboard-menu>
-  </ng-template>
-
-  <ng-template #content>
-    <mix-content-menu></mix-content-menu>
-  </ng-template>
-
-  <ng-template #template>
-    <mix-template-menu></mix-template-menu>
-  </ng-template>
 </div>
