--- a/libs/mix.share/src/components/side-menu/side-menu.component.scss
+++ b/libs/mix.share/src/components/side-menu/side-menu.component.scss
@@ -3,8 +3,6 @@
 $item-active: rgba(15, 146, 243, 0.1);
 $item-hover: rgba(243, 146, 243, 0.1);
 $side-menu-width: 300px;
-$group-width: 75px;
-$group-height: 65px;
 
 .side-menu {
   height: 100%;
@@ -19,32 +17,40 @@ $group-height: 65px;
   }
 
   &__groups {
-    width: $group-width;
+    width: var(--groupWidth);
     height: 100%;
     background-color: var(--tui-base-01);
 
     .toggle {
-      cursor: pointer;
-      height: $group-width;
-      width: $group-width;
       margin-bottom: 10px;
       display: flex;
       align-items: center;
       justify-content: center;
-      border-radius: 50%;
+      flex-direction: column;
+      padding: 10px 0px;
 
-      &:hover {
-        background-color: $item-hover;
-      }
+      .btn {
+        box-shadow: var(--mix-box-shadow);
+        border: 0.5px solid var(--tui-base-03);
+        border-radius: 3px;
+        cursor: pointer;
+        tui-svg {
+          transform: scale(0.8);
+        }
 
-      &:active {
-        background-color: $item-active;
+        &:hover {
+          background-color: $item-hover;
+        }
+
+        &:active {
+          background-color: $item-active;
+        }
       }
     }
 
     .item {
-      width: $group-width;
-      height: $group-height;
+      height: var(--groupHeight);
+      width: var(--groupWidth);
       margin-bottom: 5px;
       display: flex;
       align-items: center;
@@ -71,7 +77,7 @@ $group-height: 65px;
         background-color: $item-hover;
 
         &::before {
-          height: calc($group-height / 2);
+          height: calc(var(--groupHeight) / 2);
         }
       }
 
@@ -79,7 +85,7 @@ $group-height: 65px;
         background-color: $item-active;
 
         &::before {
-          height: $group-height;
+          height: var(--groupHeight);
         }
       }
 
@@ -102,7 +108,7 @@ $group-height: 65px;
   }
 
   &__menu {
-    width: calc($side-menu-width - $group-width);
+    width: calc($side-menu-width - var(--groupWidth));
 
     .menu {
       width: 100%;
