--- a/apps/mix-portal/src/app/routes/portal/page/detail/page-detail.component.html
+++ b/apps/mix-portal/src/app/routes/portal/page/detail/page-detail.component.html
@@ -92,10 +92,29 @@
       <div *ngIf="activeTabIndex === 3"
            class="page-detail__main-widget"
            [formGroup]="form">
+        <label [label]="'Page template:'"
+               tuiLabel>
+          <tui-select [(ngModel)]="selectedTemplate"
+                      [disabled]="!!(disabled$ | async)"
+                      [ngModelOptions]="{standalone: true}"
+                      [tuiTextfieldLabelOutside]="true"
+                      [valueContent]="itemContent"
+                      (ngModelChange)="pageTemplateChange($event)"
+                      tuiTextfieldSize="s">
+            <tui-data-list-wrapper *tuiDataList
+                                   [itemContent]="itemContent"
+                                   [items]="availableTemplates"></tui-data-list-wrapper>
+          </tui-select>
+        </label>
+
+        <ng-template #itemContent
+                     let-item>
+          {{ item.fileName }}
+        </ng-template>
         <p style="margin-top: 5px;"> </p>
-        <mix-template-editor *ngIf="selectedTemplateId"
+        <mix-template-editor *ngIf="selectedTemplate"
                              [disabled]="true"
-                             [templateId]="selectedTemplateId"></mix-template-editor>
+                             [templateId]="selectedTemplate.id"></mix-template-editor>
       </div>
     </ng-template>
   </div>
