--- a/apps/mix-portal/src/app/routes/portal/module/detail/module-detail.component.html
+++ b/apps/mix-portal/src/app/routes/portal/module/detail/module-detail.component.html
@@ -1,1 +1,76 @@
-<p>module-detail works!</p>
+<mix-content-detail-container (save)="savePage()">
+  <div class="module-detail">
+    <tui-tabs class="custom-tabs"
+              [(activeItemIndex)]="activeTabIndex">
+      <button class="custom-tabs__btn"
+              [disabled]="!!(loading$ | async)"
+              (click)="activeTabIndex = 0"
+              tuiTab>
+        <tui-svg src="tuiIconEdit"></tui-svg>
+        Content
+      </button>
+      <button class="custom-tabs__btn"
+              [disabled]="!!(loading$ | async)"
+              (click)="activeTabIndex = 1"
+              tuiTab>
+        <tui-svg src="tuiIconFile"></tui-svg>
+        Template
+      </button>
+    </tui-tabs>
+
+    <div *ngIf="!!(loading$ | async); else mainTemplate"
+         class="module-detail__main-widget">
+      <mix-skeleton-loading [type]="'form'">
+      </mix-skeleton-loading>
+    </div>
+
+    <ng-template #mainTemplate>
+      <div *ngIf="activeTabIndex === 0"
+           class="module-detail__main-widget"
+           [formGroup]="form">
+        <div class="mix-form__row">
+          <mix-input-labeled [label]="'Title'"
+                             formControlName="title"></mix-input-labeled>
+        </div>
+
+        <div class="mix-form__row">
+          <mix-input-labeled [label]="'Excerpt'"
+                             formControlName="excerpt"></mix-input-labeled>
+        </div>
+
+        <div class="mix-form__row">
+          <mix-rich-text-editor [label]="'Content'"
+                                formControlName="content"></mix-rich-text-editor>
+        </div>
+      </div>
+
+      <div *ngIf="activeTabIndex === 1"
+           class="module-detail__main-widget"
+           [formGroup]="form">
+        <label [label]="'Module template:'"
+               tuiLabel>
+          <tui-select [(ngModel)]="selectedTemplate"
+                      [disabled]="!!(disabled$ | async)"
+                      [ngModelOptions]="{standalone: true}"
+                      [tuiTextfieldLabelOutside]="true"
+                      [valueContent]="itemContent"
+                      (ngModelChange)="moduleTemplateChange($event)"
+                      tuiTextfieldSize="s">
+            <tui-data-list-wrapper *tuiDataList
+                                   [itemContent]="itemContent"
+                                   [items]="availableTemplates"></tui-data-list-wrapper>
+          </tui-select>
+        </label>
+
+        <ng-template #itemContent
+                     let-item>
+          {{ item.fileName }}
+        </ng-template>
+        <p style="margin-top: 5px;"> </p>
+        <mix-template-editor *ngIf="selectedTemplate"
+                             [disabled]="true"
+                             [templateId]="selectedTemplate.id"></mix-template-editor>
+      </div>
+    </ng-template>
+  </div>
+</mix-content-detail-container>
