update nhẹ spacing

--- a/libs/mix.share/src/components/side-menu/side-menu.component.html
+++ b/libs/mix.share/src/components/side-menu/side-menu.component.html
@@ -40,7 +40,7 @@
        [@enterAnimation]>
     <div class="side-menu__big-logo">
       <img src="assets/images/mixcore-logo-red-2.svg"
-           width="165px">
+           height="28px">
     </div>
     <ng-container [ngSwitch]="currentSelectedItem.id">
       <!-- Dashboard -->
