--- a/libs/mix.share/src/components/side-menu/side-menu.component.scss
+++ b/libs/mix.share/src/components/side-menu/side-menu.component.scss
@@ -2,7 +2,7 @@
 // $item-hover: rgba(243, 146, 243, 0.1);
 $item-active: rgba(15, 146, 243, 0.1);
 $item-hover: rgba(243, 146, 243, 0.1);
-$side-menu-width: 300px;
+$side-menu-width: 331px;
 
 .side-menu {
   height: 100%;
@@ -11,9 +11,10 @@ $side-menu-width: 300px;
   position: relative;
 
   &__big-logo {
-    padding: 10px 10px;
-    margin: 10px 5px;
-    border-bottom: 1px solid var(--tui-base-03);
+    // padding: 10px 10px;
+    margin: 20px 20px 10px 20px;
+    height: 40px;
+    // border-bottom: 1px solid var(--tui-base-03);
   }
 
   &__groups {
@@ -113,12 +114,13 @@ $side-menu-width: 300px;
     .menu {
       width: 100%;
       height: 100%;
-      padding: 0px 10px 10px 15px;
+      padding: 0px 10px 10px 10px;
 
       &__label {
-        font-weight: 700;
+        font-weight: 500;
         font-size: 14px;
-        margin-bottom: 10px;
+        margin-top: 8px;
+        margin-bottom: 8px;
       }
 
       &__item {
@@ -143,9 +145,9 @@ $side-menu-width: 300px;
           display: block;
           content: '';
           width: 15px;
-          height: 30px;
+          height: 25px;
           position: absolute;
-          top: -15px;
+          top: -8px;
           left: 0;
           border-bottom: 2px solid var(--tui-base-04);
           border-left: 2px solid var(--tui-base-04);
