--- a/apps/mix-portal/src/styles/variables.scss
+++ b/apps/mix-portal/src/styles/variables.scss
@@ -13,6 +13,6 @@
   --mix-border-radius-02: 15px;
   --mix-primary: #0f92f3;
   --mix-toolbar-color: #fff;
-
   --mix-side-menu-group-bg: #fff;
+  --mix-tab-height: 2.5rem;
 }
