--- a/libs/mix.share/src/components/side-menu/template-menu/template-menu.component.html
+++ b/libs/mix.share/src/components/side-menu/template-menu/template-menu.component.html
@@ -1,7 +1,7 @@
 <div class="menu">
   <button type="button"
           [shape]="'rounded'"
-          [size]="'l'"
+          [size]="'s'"
           tuiButton>
     New theme
   </button>
