--- a/libs/mix.share/src/components/side-menu/side-menu.component.scss
+++ b/libs/mix.share/src/components/side-menu/side-menu.component.scss
@@ -1,6 +1,5 @@
 $item-active: rgba(15, 146, 243, 0.1);
 $item-hover: rgba(243, 146, 243, 0.1);
-$side-menu-width: 331px;
 
 .side-menu {
   height: 100%;
@@ -105,7 +104,7 @@ $side-menu-width: 331px;
   }
 
   &__menu {
-    width: calc($side-menu-width - var(--groupWidth));
+    width: calc(var(--groupWidth) + 256px);
 
     .menu {
       width: 100%;
