feat(theme): add file tree on side menu

--- a/libs/mix.share/src/components/side-menu/template-menu/template-menu.component.html
+++ b/libs/mix.share/src/components/side-menu/template-menu/template-menu.component.html
@@ -30,4 +30,10 @@
       </ng-template>
     </tui-accordion-item>
   </tui-accordion>
+
+  <div class="menu__separator"></div>
+
+  <mix-theme-file-tree *ngIf="selectedThemeId"
+                       [showFileDate]="false"
+                       [themeId]="selectedThemeId"></mix-theme-file-tree>
 </div>
