--- a/libs/mix.share/src/components/theme-file-tree/folder-files/file.component.html
+++ b/libs/mix.share/src/components/theme-file-tree/folder-files/file.component.html
@@ -32,7 +32,8 @@
              (click)="fileClick(item)">
           {{ item.fileName }}{{ item.extension}}
         </div>
-        <div class="date-modified">
+        <div *ngIf="showFileDate"
+             class="date-modified">
           {{ item.createdDateTime || item.lastModified | date }}
         </div>
       </div>
