--- a/apps/mix-portal/src/app/routes/portal/portal.layout.scss
+++ b/apps/mix-portal/src/app/routes/portal/portal.layout.scss
@@ -7,8 +7,8 @@
 
   &__workspace {
     width: 100%;
-    margin-left: 10px;
-    margin-top: 10px;
+    margin-left: var(--mix-space-1);
+    margin-top: var(--mix-space-1);
     background-color: #fff;
     transition: all 0.2s ease-in-out;
     border-top-left-radius: var(--mix-border-radius-02);
@@ -28,6 +28,7 @@
   &__chat-bubble {
     position: absolute;
     bottom: 0px;
-    right: 10px;
+    right: var(--mix-space-1);
+    z-index: 3;
   }
 }
