--- a/libs/mix.share/src/components/side-menu/content-menu/content-menu.component.html
+++ b/libs/mix.share/src/components/side-menu/content-menu/content-menu.component.html
@@ -11,11 +11,11 @@
   </tui-hosted-dropdown>
   <ng-template #content>
     <tui-data-list role="menu">
-      <a (click)="appEvent.notify(events.CreatePost)"
+      <a (click)="appEvent.notify({type: events.CreatePost})"
          tuiOption> New Post </a>
-      <a (click)="appEvent.notify(events.CreatePage)"
+      <a (click)="appEvent.notify({type: events.CreatePage})"
          tuiOption> New Page </a>
-      <a (click)="appEvent.notify(events.CreateModule)"
+      <a (click)="appEvent.notify({type: events.CreateModule})"
          tuiOption> New Module </a>
     </tui-data-list>
   </ng-template>
@@ -29,7 +29,7 @@
       <div class="menu__group">Posts</div>
       <ng-template tuiAccordionItemContent>
         <div class="menu__item"
-             (click)="appEvent.notify(events.CreatePost)"><a> Create post </a></div>
+             (click)="appEvent.notify({type: events.CreatePost})"><a> Create post </a></div>
         <div class="menu__item"
              (click)="navigateTo(routes.PostList)"><a> List post </a></div>
       </ng-template>
@@ -41,7 +41,7 @@
       <div class="menu__group">Pages</div>
       <ng-template tuiAccordionItemContent>
         <div class="menu__item"
-             (click)="appEvent.notify(events.CreatePage)"><a> Create page </a></div>
+             (click)="appEvent.notify({type: events.CreatePage})"><a> Create page </a></div>
         <div class="menu__item"
              (click)="navigateTo(routes.PageList)"><a> List page </a></div>
       </ng-template>
@@ -53,7 +53,7 @@
       <div class="menu__group">Modules</div>
       <ng-template tuiAccordionItemContent>
         <div class="menu__item"
-             (click)="appEvent.notify(events.CreateModule)"><a> Create module </a></div>
+             (click)="appEvent.notify({type: events.CreateModule})"><a> Create module </a></div>
         <div class="menu__item"
              (click)="navigateTo(routes.ModuleList)"><a> List module </a></div>
       </ng-template>
