--- a/libs/mix.share/src/components/side-menu/side-menu.component.scss
+++ b/libs/mix.share/src/components/side-menu/side-menu.component.scss
@@ -95,7 +95,7 @@ $item-hover: rgba(243, 146, 243, 0.1);
     }
 
     .search {
-      height: 40px;
+      height: var(--mix-space-05);
       margin-bottom: 16px;
       display: flex;
       align-items: center;
@@ -109,7 +109,7 @@ $item-hover: rgba(243, 146, 243, 0.1);
     .menu {
       width: 100%;
       height: 100%;
-      padding: 0px 20px 10px 20px;
+      padding: 0px 24px 10px 24px;
 
       &__label {
         font-weight: 500;
@@ -127,6 +127,7 @@ $item-hover: rgba(243, 146, 243, 0.1);
         color: black;
         transition: all 0.2s ease;
         position: relative;
+        height: var(--mix-space-4);
 
         &:hover {
           opacity: 0.7;
