--- a/libs/mix.share/src/components/side-menu/template-menu/template-menu.component.html
+++ b/libs/mix.share/src/components/side-menu/template-menu/template-menu.component.html
@@ -32,8 +32,9 @@
   </tui-accordion>
 
   <div class="menu__separator"></div>
-
-  <mix-theme-file-tree *ngIf="selectedThemeId"
-                       [showFileDate]="false"
-                       [themeId]="selectedThemeId"></mix-theme-file-tree>
+  <div style="height: 50vh; overflow: auto">
+    <mix-theme-file-tree *ngIf="selectedThemeId"
+                         [showFileDate]="false"
+                         [themeId]="selectedThemeId"></mix-theme-file-tree>
+  </div>
 </div>
