--- a/libs/mix.share/src/components/side-menu/content-menu/content-menu.component.html
+++ b/libs/mix.share/src/components/side-menu/content-menu/content-menu.component.html
@@ -22,7 +22,8 @@
 
   <div class="menu__separator"></div>
 
-  <tui-accordion [closeOthers]="false">
+  <tui-accordion class="menu__accordion"
+                 [closeOthers]="false">
     <tui-accordion-item [borders]="null"
                         [open]="true"
                         [size]="'s'">
