--- a/libs/mix.share/src/components/theme-file-tree/theme-file-tree.component.html
+++ b/libs/mix.share/src/components/theme-file-tree/theme-file-tree.component.html
@@ -1,4 +1,5 @@
-<ng-container *ngIf="themeId">
+<div *ngIf="themeId"
+     class="theme-file-tree">
   <mix-folder-file [folderType]="FOLDER.Masters"
                    [showFileDate]="showFileDate"
                    [themeId]="themeId"></mix-folder-file>
@@ -20,4 +21,4 @@
   <mix-folder-file [folderType]="FOLDER.Edms"
                    [showFileDate]="showFileDate"
                    [themeId]="themeId"></mix-folder-file>
-</ng-container>
+</div>
