fix(code): fix code editor

--- a/libs/mix.ui/src/lib/code-editor/code-editor.component.scss
+++ b/libs/mix.ui/src/lib/code-editor/code-editor.component.scss
@@ -2,9 +2,9 @@
   height: 100%;
   resize: vertical;
   overflow: auto;
+  height: 500px;
 
   ngx-monaco-editor {
-    // height: calc(100vh - var(--mix-header-height) - var(--tui-height-l) - 2rem);
-    height: 400px;
+    height: 100%;
   }
 }
