--- a/libs/mix.share/src/components/side-menu/side-menu.component.scss
+++ b/libs/mix.share/src/components/side-menu/side-menu.component.scss
@@ -184,6 +184,10 @@ $item-hover: rgba(243, 146, 243, 0.1);
           border-radius: 1rem;
         }
       }
+
+      &__file-tree {
+        overflow: auto;
+      }
     }
   }
 }
