--- a/libs/mix.share/src/components/mix-polymorpheus-list/mix-polymorpheus-list.component.html
+++ b/libs/mix.share/src/components/mix-polymorpheus-list/mix-polymorpheus-list.component.html
@@ -45,6 +45,7 @@
             <mix-status-indicator [status]="data.status"></mix-status-indicator>
           </ng-template>
         </div>
+
         <div [columnType]="'ACTION'"
              [showHeader]="false"
              [sortable]="false"
@@ -53,16 +54,12 @@
              key="Action">
           <ng-template let-data
                        mixColumnCell>
-            <tui-hosted-dropdown [content]="action"
-                                 tuiDropdownAlign="left">
-              <button type="button"
-                      (click)="currentActionItem = data"
-                      tuiIconButton
-                      size="m"
-                      appearance="flat"
-                      icon="tuiIconMoreVer">
-              </button>
-            </tui-hosted-dropdown>
+            <button type="button"
+                    [size]="'s'"
+                    (click)="editItem(data)"
+                    tuiButton>
+              Edit
+            </button>
           </ng-template>
         </div>
       </mix-data-table>
@@ -112,17 +109,3 @@
       </div>
     </div>
   </div>
-
-  <ng-template #action>
-    <tui-data-list>
-      <button class="tui-space_right-3"
-              type="button"
-              [size]="'s'"
-              (click)="editItem()"
-              tuiOption
-              tuiHintMode="onDark"
-              tuiHintDirection="right">
-        Edit
-      </button>
-    </tui-data-list>
-  </ng-template>
