--- a/libs/mix.share/src/components/header-menu/header-menu.component.scss
+++ b/libs/mix.share/src/components/header-menu/header-menu.component.scss
@@ -3,7 +3,6 @@
   box-sizing: border-box;
   display: flex;
   height: var(--mix-header-height);
-  border-bottom: 1px solid var(--tui-base-04);
   align-items: center;
   padding: 0 15px;
   justify-content: space-between;
@@ -14,8 +13,12 @@
   &__search {
     width: 250px;
   }
-  &__title {
-    font-size: 14px;
+  &__breadcrumb {
+    padding: 0 10px;
+    border-radius: var(--mix-border-radius-02);
+    background: var(--tui-base-02);
+    margin-right: var(--mix-space-2);
+    margin-left: -10px;
   }
   &__user-info {
     padding: 1rem 1rem 0rem 1rem;
