--- a/apps/mix-portal/src/app/routes/portal/portal.layout.scss
+++ b/apps/mix-portal/src/app/routes/portal/portal.layout.scss
@@ -30,6 +30,7 @@
     box-sizing: border-box;
     background-color: #fff;
     position: relative;
+    overflow: hidden;
   }
 
   &__chat-bubble {
