feat(quick-create): add overlay

--- a/libs/mix.share/src/components/dialogs/creation-dialog/creation-dialog.component.html
+++ b/libs/mix.share/src/components/dialogs/creation-dialog/creation-dialog.component.html
@@ -2,6 +2,7 @@
   <div class="creation-dialog__content">
     <div class="creation-dialog__content-left-side">
       <div class="toolbar">
+        <div> Create new <strong>{{ type }}</strong></div>
         <button class="action"
                 [icon]="'tuiIconCheckLarge'"
                 [showLoader]="loading"
