--- a/libs/mix.share/src/components/portal-sidebar-host/portal-sidebar-host.component.html
+++ b/libs/mix.share/src/components/portal-sidebar-host/portal-sidebar-host.component.html
@@ -1,3 +1,4 @@
-<div class="portal-sidebar-host">
+<div class="portal-sidebar-host"
+     [ngClass]="{'--open': sidebarControl.currentTemplate}">
   <ng-container #viewContainer></ng-container>
 </div>
