--- a/libs/mix.share/src/components/portal-sidebar-host/portal-sidebar-host.component.scss
+++ b/libs/mix.share/src/components/portal-sidebar-host/portal-sidebar-host.component.scss
@@ -8,5 +8,11 @@
 
 .portal-sidebar-host {
   height: 100%;
-  width: 100%;
+
+  &.--open {
+    width: 100vw;
+    display: flex;
+    justify-content: flex-end;
+    background: rgba(0, 0, 0, 0.5);
+  }
 }
